--- a/armour-potion-effects.html
+++ b/armour-potion-effects.html
@@ -206,7 +206,7 @@ public static final RegistryObject<Item> BOOT = ITEMS.register("boot",
 					() -> new ExampleArmorItem(CustomArmorMaterial.ARMOUR, EquipmentSlotType.FEET,
 							new Item.Properties().tab(MainItemGroup.MAIN)));
 						</pre>
-<p>Now you are done if it does not work join my <a href="http://j.gs/FVrl">discord</a> and ask for support.</p>
+<p>Now you are done if it does not work join my <a href="">discord</a> and ask for support.</p>
 
 <h2>How to make it when wearing full armor you are able to fly.</h2>
 
