--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							<ul class="top-links-container">
 								<li class="top-links-item px-1 ls2"><a href="index.html">Home</a></li>
 								<li class="top-links-item px-1 ls2"><a href="about-me.html">About me</a></li>
-								<li class="top-links-item px-1 ls2"><a href="http://j.gs/FVrq">Mod page</a></li>
+								<li class="top-links-item px-1 ls2"><a href="">Mod page</a></li>
 								<li class="top-links-item"><a href="1.16-tutorials.html">Mc Tutorials</a>
 								<ul class="top-links-sub-menu">
 									<li class="top-links-item"><a href="1.16-tutorials.html">1.16 Tutorials</a></li>	
