--- a/about-me.html
+++ b/about-me.html
@@ -100,7 +100,7 @@
 						<div class="col-lg-6">
 									<h3>Projects made</h3>
 
-							<p> i have so far made 3 projects and i am currently working on two. You can find them here <a href=>first one is the main i am working on</a> and <a href=>the second one which i am working on.</a>  I have also created a discord moderation bot and a website for my father which you can find <a href=>here</a></p>
+							<p> i have so far made 3 projects and i am currently working on two. You can find them here <a href="https://www.curseforge.com/minecraft/mc-mods/ben-ten-mob-mod">first one is the main i am working on</a> and <a href="https://www.curseforge.com/minecraft/mc-mods/armour-and-items-mod">the second one which i am working on.</a>  I have also created a discord moderation bot and a website for my father which you can find <a href="https://drismail.co.uk">here</a></p>
 						</div>
 					</div>
 
