--- a/crafting-recipes.html
+++ b/crafting-recipes.html
@@ -110,6 +110,8 @@
 <h1>Important</h1>
 
 <p>Use a Data generator if you are adding more than a couple of items in your mod. Part 1 will be creating a recipe in a json file were as part 2 is adding a recipe in a Data generator. So lets get started.</p>
+
+<h1>First of all</h1>
 							
 
 <p>You are done with this tutorial.</p>
