--- a/1.16-tutorials.html
+++ b/1.16-tutorials.html
@@ -66,14 +66,9 @@
 
 		<!-- Header
 		============================================= -->
-		<header id="header" class="full-header">
-			<div id="header-wrap">
-		
-
-					</div>
-				</div>
-			</div>
-			<div class="header-wrap-clone"></div>
+		<header id="header" class="full-header transparent-header dark" data-sticky-class="not-dark">
+			<div id="top-bar" class="transparent-topbar dark py-md-2">
+				
 		</header><!-- #header end -->
 
 		<!-- Page Title
@@ -141,21 +136,20 @@
 
 				</div>
 			</div>
-		</section><!-- #content end -->
-
-		<!-- Footer
+        </section><!-- #content end -->
+        <!-- Footer
 		============================================= -->
-	
-	
-
-				<!-- Footer Widgets
-				============================================= -->
+		
+			
 				
-				<div id="footer">
+		<div id="footer">
 		
-				</div>
-		
+		</div>
+
+
 	</div><!-- #wrapper end -->
+
+
 
 	<!-- Go To Top
 	============================================= -->
