fixed link issue

--- a/1.16-tutorials.html
+++ b/1.16-tutorials.html
@@ -79,7 +79,7 @@
 				<h1>Mc tutorials</h1>
 				<span>All my mc tutorials for 1.16.5</span>
 				<ol class="breadcrumb">
-					<li class="breadcrumb-item"><a href="index.htmls">Home</a></li>
+					<li class="breadcrumb-item"><a href="index.html">Home</a></li>
 					<li class="breadcrumb-item active" aria-current="page">Mc 1.16.5 tutorials</li>
 				</ol>
 			</div>
