--- a/crafting-recipes.html
+++ b/crafting-recipes.html
@@ -81,7 +81,7 @@
 				<h1>Mc tutorials</h1>
 				<span>All my mc tutorials for 1.16.5</span>
 				<ol class="breadcrumb">
-					<li class="breadcrumb-item"><a href="index.html">Home</a></li>
+					<li class="breadcrumb-item"><a href="1.16-tutorials.html">1.16 tutorials</a></li>
 					<li class="breadcrumb-item active" aria-current="page">Mc 1.16.5 tutorials.This is how to create a crafting recipes with data generator and without. in 1.16.5(new mapping)</li>
 				</ol>
 			</div>
