--- a/armour-potion-effects.html
+++ b/armour-potion-effects.html
@@ -81,7 +81,7 @@
 				<h1>Mc tutorials</h1>
 				<span>All my mc tutorials for 1.16.5</span>
 				<ol class="breadcrumb">
-					<li class="breadcrumb-item"><a href="index.html">Home</a></li>
+					<li class="breadcrumb-item"><a href="1.16-tutorials.html">1.16 tutorials</a></li>
 					<li class="breadcrumb-item active" aria-current="page">Mc 1.16.5 tutorials</li>
 				</ol>
 			</div>
