--- a/armour-potion-effects.html
+++ b/armour-potion-effects.html
@@ -82,7 +82,7 @@
 				<span>All my mc tutorials for 1.16.5</span>
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="1.16-tutorials.html">1.16 tutorials</a></li>
-					<li class="breadcrumb-item active" aria-current="page">Mc 1.16.5 tutorials</li>
+					<li class="breadcrumb-item active" aria-current="page">How to add potion effect to a player when they wear an armour or armour set.</li>
 				</ol>
 			</div>
 
