--- a/crafting-recipes.html
+++ b/crafting-recipes.html
@@ -82,7 +82,7 @@
 				<span>All my mc tutorials for 1.16.5</span>
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="1.16-tutorials.html">1.16 tutorials</a></li>
-					<li class="breadcrumb-item active" aria-current="page">Mc 1.16.5 tutorials.This is how to create a crafting recipes with data generator and without. in 1.16.5(new mapping)</li>
+					<li class="breadcrumb-item active" aria-current="page">How to add Crafting Recipes.</li>
 				</ol>
 			</div>
 
@@ -111,6 +111,12 @@
 <p>Use a Data generator if you are adding more than a couple of items in your mod. Part 1 will be creating a recipe in a json file were as part 2 is adding a recipe in a Data generator. So lets get started.</p>
 
 <h1>First of all</h1>
+
+<p>You want to go src/main/resources/data/modidfolder. for example mine is bentenmobmod which is my modid.</p>
+
+<p>After that you want to create a recipes folder in which you will create a json file for the recipe.</p>
+
+<p>Next you will create a json file called your item name or armour name for example i will use a sword in my mod and i will call the file heatblast_sword.json</p>
 							
 
 <p>You are done with this tutorial.</p>
