--- a/crafting-recipes.html
+++ b/crafting-recipes.html
@@ -117,6 +117,15 @@
 <p>After that you want to create a recipes folder in which you will create a json file for the recipe.</p>
 
 <p>Next you will create a json file called your item name or armour name for example i will use a sword in my mod and i will call the file heatblast_sword.json</p>
+
+<p>In the json file we will start by adding this code</p>
+
+'''
+{
+	"type": "minecraft:crafting_shaped",
+'''
+
+<p>This is the type of crafting you want to use. This is for the crafting table if you want to do smelting for example it would be smelting instead of crafting_shaped</p>
 							
 
 <p>You are done with this tutorial.</p>
