--- a/crafting-recipes.html
+++ b/crafting-recipes.html
@@ -120,12 +120,33 @@
 
 <p>In the json file we will start by adding this code</p>
 
-'''
+<pre>
 {
 	"type": "minecraft:crafting_shaped",
-'''
+</pre>
+
 
 <p>This is the type of crafting you want to use. This is for the crafting table if you want to do smelting for example it would be smelting instead of crafting_shaped</p>
+
+<p>Next you want to add the crafting pattern. This is how you craft the item for example for a diamond sword. You put 2 diamonds in the middle and the stick. This can be done like this. This is for the sword.</p>
+
+<pre>
+{
+	"type": "minecraft:crafting_shaped",
+	"pattern": [
+	  " F ",
+	  " O ",
+	  " # "
+	],
+</pre>
+
+<p>These letter will be defined letter in the code. F is in the middle because this is a sword crafting recipe.</p>
+
+<p>Next you will want to define what these letters mean.</p>
+
+<pre>
+
+</pre>
 							
 
 <p>You are done with this tutorial.</p>
