--- a/nav.html
+++ b/nav.html
@@ -35,6 +35,11 @@
         </div>
 
     
+        <button class="dark-mode-button top-dark-mode-button" aria-label="dark mode toggle">
+            <span aria-hidden="true" class="dark-toggle">
+                <span class="DTspan"></span>
+            </span>
+        </button>
         <div class="col-12 col-lg-3 col-md-2">
     
 
