--- a/1.16-tutorials.html
+++ b/1.16-tutorials.html
@@ -56,6 +56,15 @@
 		   $("#footer").load("footer.html");
 		});
 		</script>
+		<style type="text/css">
+			@media (prefers-color-scheme: dark) {
+			  body {
+				background-color: black;
+				color: white;
+			  }
+			}
+		</style>
+		
 </head>
 
 <body class="stretched">
