--- a/1.16-tutorials.html
+++ b/1.16-tutorials.html
@@ -10,6 +10,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Poppins:300,400,500,600,700|PT+Serif:400,400i&display=swap" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
 	<link rel="stylesheet" href="style.css" type="text/css" />
+	<link rel="stylesheet" href="dark.css" type="text/css" />
 	<link rel="stylesheet" href="css/dark.css" type="text/css" />
 	<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
 	<link rel="stylesheet" href="css/animate.css" type="text/css" />
@@ -56,15 +57,8 @@
 		   $("#footer").load("footer.html");
 		});
 		</script>
-		<style type="text/css">
-			@media (prefers-color-scheme: dark) {
-			  body {
-				background-color: black;
-				color: white;
-			  }
-			}
-		</style>
-		
+	
+
 </head>
 
 <body class="stretched">
