--- a/1.16-tutorials.html
+++ b/1.16-tutorials.html
@@ -62,7 +62,9 @@
 </head>
 
 <body class="stretched">
-
+	<div class="switch">Dark mode:              
+        <span class="inner-switch">OFF</span>
+    </div>
 	<!-- Document Wrapper
 	============================================= -->
 	<div id="wrapper" class="clearfix">
@@ -161,10 +163,10 @@
 	============================================= -->
 	<script src="js/jquery.js"></script>
 	<script src="js/plugins.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 
 	<!-- Footer Scripts
 	============================================= -->
 	<script src="js/functions.js"></script>
-
 </body>
 </html>
