--- a/nav.html
+++ b/nav.html
@@ -2,6 +2,10 @@
 <div class="container">
     <div class="row align-items-center">
 
+        <body class="stretched">
+            <div class="switch">Dark mode:              
+                <span class="inner-switch">OFF</span>
+            </div>
         <div class="col-12 col-lg-3 col-md-2">
             <div class="top-links d-flex justify-content-center justify-content-lg-start">
                 <ul class="top-links-container">
