--- a/about-me.html
+++ b/about-me.html
@@ -60,7 +60,10 @@
 		</script>
 
 </head>
-
+<body class="stretched">
+	<div class="switch">Dark mode:              
+        <span class="inner-switch">OFF</span>
+    </div>
 <body class="stretched">
 
 	<!-- Document Wrapper
@@ -128,6 +131,8 @@
 	============================================= -->
 	<script src="js/jquery.js"></script>
 	<script src="js/plugins.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+
 
 	<!-- Footer Scripts
 	============================================= -->
