--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
 </head>
 
 
+<body class="stretched">	
+	<div class="switch">Dark mode:
+	<span class="inner-switch">OFF</span>
+	</div>
 
                 <body class="stretched block-nav-header">
                   <div id="top-bar" class="transparent-topbar dark py-md-2">
@@ -160,6 +164,7 @@
 	============================================= -->
 	<script src="js/jquery.js"></script>
 	<script src="js/plugins.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 
 	<script src="js/jquery.hotspot.js"></script>
 
