--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	============================================= -->
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Lato:wght@400;500;600;700&display=swap" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
-	<link rel="stylesheet" href="style.css" type="text/css" />
+	<link rel="stylesheet" href="index_style.css" type="text/css" />
 	<link rel="stylesheet" href="css/swiper.css" type="text/css" />
 	<link rel="stylesheet" href="css/dark.css" type="text/css" />
 	<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
@@ -60,9 +60,7 @@
 
 
 <body class="stretched">	
-	<div class="switch">Dark mode:
-	<span class="inner-switch">OFF</span>
-	</div>
+	
 
                 <body class="stretched block-nav-header">
                   <div id="top-bar" class="transparent-topbar dark py-md-2">
