--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<!-- Document Title
 	============================================= -->
 	<title>Home | RealYusufIsmail</title>
-
+	<iframe src="https://discord.com/widget?id=842490150537527306&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 	<style>
 		@media (min-width: 992px) {
 
