--- a/coming-soon.html
+++ b/coming-soon.html
@@ -2,7 +2,7 @@
 <html dir="ltr" lang="en-US"> <head src="https://code.jquery.com/jquery-1.10.2.js">
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="author" content="SemiColonWeb" />
-	<link rel="shortcut icon" href="images/logo.jpg" type="image/jpg"	>
+	<link rel="shortcut icon" href="images/logo.jpg" type="image/jpg">
 
 	<!-- Stylesheets
 	============================================= -->
@@ -67,8 +67,8 @@
 				<div class="container">
 
 					<div class="heading-block text-center border-bottom-0">
-						<h1>I have started.</h1>
-						<span>Please check back again within a few weeks or month</span>
+						<h1>Comming soon</h1>
+						<span>Please check back again within a few weeks or month.</span>
 					</div>
 
 					<div id="countdown-ex1" class="countdown countdown-large mx-auto bottommargin" data-year="2021" style="max-width:700px;"></div>
@@ -76,7 +76,7 @@
 					<div class="clear"></div>
 
 					<div class="progress topmargin mx-auto" style="height: 10px; max-width:600px;">
-						<div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="0" style="width: 0%">
+						<div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="0" style="width: 1%">
 						</div>
 					</div>
 
@@ -92,10 +92,7 @@
 		<div id="footer">
 		
 		</div>
-			
-
 	</div><!-- #wrapper end -->
-
 	<!-- Go To Top
 	============================================= -->
 	<div id="gotoTop" class="icon-angle-up"></div>
