--- a/404.html
+++ b/404.html
@@ -67,7 +67,7 @@
 
 						<div class="heading-block border-bottom-0">
 							<h4>Ooopps.! The Page you were looking for, couldn't be found.</h4>
-							<span>Try the search below to find matching pages:</span>
+							<!--<span>Try the search below to find matching pages:</span>-->
 						</div>
 
 					
